fix: add spacing between nav menu items with margin

--- a/velure3/assets/css/base.css
+++ b/velure3/assets/css/base.css
@@ -245,6 +245,15 @@ h1, h2, h3, h4, h5, h6 {
   display: inline-flex !important;
   flex-direction: row !important;
   align-items: center !important;
+  margin: 0 0.65rem !important;
+}
+.velure-nav-list > li:first-child,
+.velure-nav-list > .menu-item:first-child {
+  margin-left: 0 !important;
+}
+.velure-nav-list > li:last-child,
+.velure-nav-list > .menu-item:last-child {
+  margin-right: 0 !important;
 }
 
 ::-webkit-scrollbar { width: 6px; }
